@@ -21,6 +21,7 @@ CAY-2379 Modeler: Visualization issue after an undo action for a deleted ObjAttr
 CAY-2380 ReferenceMap should not store or return null values
 CAY-2382 Lack of synchronization in DataContext serialization
 CAY-2384 Modeler: Visualization issue after an undo action for a deleted ObjRelationship
+CAY-2387 Can't select byte[] property with ColumnSelect
 
 ----------------------------------
 Release: 4.1.M1
